asante_ml_models/envoy.yaml
static_resources:
  listeners:
  - name: listener_grpc_web
    address:
      socket_address: { address: 0.0.0.0, port_value: 8080 }
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: grpc_web
          codec_type: AUTO
          route_config:
            name: local_route
            virtual_hosts:
            - name: backend
              # allow all origins (for dev only)
              cors:
                allow_origin_string_match:
                  - prefix: "*"
                allow_methods: "GET,POST,OPTIONS"
                allow_headers: "*"
                expose_headers: "grpc-status,grpc-message"
                max_age: "1728000"
              domains: ["*"]
              routes:
              - match: { prefix: "/ml_service.MLService/" }
                route:
                  cluster: grpc_backend
                  max_grpc_timeout: 0s
          http_filters:
          # CORS filter must come before grpc_web
          - name: envoy.filters.http.cors
          - name: envoy.filters.http.grpc_web
          - name: envoy.filters.http.router

  clusters:
  - name: grpc_backend
    type: STRICT_DNS                 # use DNS to resolve the Docker service name
    dns_lookup_family: V4_ONLY       # only IPv4
    connect_timeout: 0.25s
    http2_protocol_options: {}
    load_assignment:
      cluster_name: grpc_backend
      endpoints:
        - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: asante_ml_service
                    port_value: 50052
